# claw-js

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  NOTES.md  README.md  TODO  demo1.c
include/: Claw.h  claw.h
include/claw/: basic_ops.h  defines.h  device.h  error.h  matmul.h  matrix.h  utils.h
js/: README.md  index.js  install.js  package-lock.json  package.json
js/src/: ffi.js  index.js  matrix.js  ops.js  primitives.js
js/test/: basic.test.js  benchmark.test.js  common.js
js/tests/: basic.test.js  bench.test.js  common.js  usecase.test.js
js/types/: index.d.ts
scripts/: kernel2str.cmake  util.cmake
src/: clops.h  demo1.c  device.c  error.c  main.c  matmul.h  matrix.c  matrix.h  use_case1.c  utils.c  utils.h
src/api/js/: index.js  install.js  package-lock.json  package.json
src/api/js/src/: ffi.js  matrix.js  ops.js  primitives.js
src/api/js/tests/: basic.test.js  bench.test.js  usecase.test.js
src/kernel/: matmul1.cl  matmul2.cl
src/opencl/: basic_ops.c  clops.c  clops.h  common.c  common.h  matmul.c  utils.h
src/opencl/kernel/: matmul1.cl  matmul1.str.c
test/: CMakeLists.txt  matmul_test.c
test/unity/: CMakeLists.txt
tests/: CMakeLists.txt  basic_ops_test.c  index_matrix_test.c  matmul_test.c  naive_impl.h  print_matrix_test.c
tools/: clinfo  clinfo.c
unused/: clops.c  demo1.c
